# eco-code-analyzer

./: .gitignore  README.md  eco_config.json  pyproject.toml  report.json  ruff.toml  test_code.py
eco_code_analyzer/: __init__.py  analyzer.py  cli.py  rules.py
eco_code_analyzer/data/: __init__.py  analysis_result.py  app_config.py  estimated_energy_savings.py  project_analysis_result.py  suggestion.py
eco_code_analyzer/rules/: __init__.py  algorithm.py  base.py  context.py  energy.py  io.py  memory.py  patterns.py  rule_example.py
