[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-code-analyzer"
version = "0.4.0"
authors = [
  { name="Moudather Chelbi", email="moudather.chelbi@gmail.com" },
]
description = "A Python library that analyzes code for ecological impact and provides optimization suggestions with enhanced rule system"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["code analysis", "environmental impact", "energy efficiency", "eco-friendly coding", "static analysis", "green computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astroid",
    "gitpython",
    "matplotlib",
    "typing_extensions; python_version < '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "mypy",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/vinerya/eco-code-analyzer"

[project.scripts]
eco-code-analyzer = "eco_code_analyzer.cli:main"
