[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-code-analyzer"
version = "0.4.1"
authors = [
  { name="Moudather Chelbi", email="moudather.chelbi@gmail.com" },
  { name="Mojmír Majer", email="mojmir.majer@gmail.com" },
]
description = "A Python library that analyzes code for ecological impact and provides optimization suggestions with enhanced rule system"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["code analysis", "environmental impact", "energy efficiency", "eco-friendly coding", "static analysis", "green computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astroid>=3.3.10",
    "gitpython>=3.1.44",
    "matplotlib>=3.10.3",
    "multipyline>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.2",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
]

[project.urls]
"Homepage" = "https://github.com/vinerya/eco-code-analyzer"

[project.scripts]
eco-code-analyzer = "eco_code_analyzer.cli:main"
